# eir-user

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: docker-image.yml  python-app.yml
alembic/: env.py
alembic/versions/: 9adec85b7024_.py
app/: db.py  main.py
app/core/: config.py
app/db/: session.py
app/models/: crud.py  example.py  schemas.py  user_entity.py
app/routers/: example.py  user.py
app/tests/: test_main.py
app/tests/core/: test_config.py
app/util/: const.py
