[tool.poetry]
name = "eir-user"
version = "0.1.0"
description = "User service of Project Eir"
authors = ["Khoa Nguyen <khoadnguyen.se@gmail.com>"]
license = "GPL-3.0"

[tool.poe.tasks]
start = "uvicorn app.main:app --port 9001 --reload"
test = "pytest"
format = "black ."

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
alembic = "^1.8.1"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
gunicorn = "^20.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
